--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-06  Brian R. Gaeke  <brg@dgate.ORG>, Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.dg/warn/incomplete1.C: New test.
+
 2002-07-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	PR c++/7099
