* gcc.c-torture/compile/20020706-1.c: New test. * gcc.c-torture/compile/20020706-2.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55290 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-06  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.c-torture/compile/20020706-1.c: New test.
+	* gcc.c-torture/compile/20020706-2.c: New test.
+
 2002-07-06  Brian R. Gaeke  <brg@dgate.ORG>, Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/warn/incomplete1.C: New test.
