error.c (dump_function_name): Use DECL_TEMPLATE_RESULT for constructor and destructor tests when...
	* error.c (dump_function_name): Use DECL_TEMPLATE_RESULT for
	constructor and destructor tests when passed a TEMPLATE_DECL.

	* g++.dg/template/qualttp21.C: New test case.

From-SVN: r55304

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,9 +1,14 @@
+2002-07-07  Roger Sayle  <roger@eyesopen.com>
+
+	* g++.dg/template/qualttp21.C: New test case.
+
 2002-07-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c-torture/compile/20020706-1.c: New test.
 	* gcc.c-torture/compile/20020706-2.c: New test.
 
-2002-07-06  Brian R. Gaeke  <brg@dgate.ORG>, Alexandre Oliva  <aoliva@redhat.com>
+2002-07-06  Brian R. Gaeke  <brg@dgate.ORG>
+	    Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/warn/incomplete1.C: New test.
 
