--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-07  Roger Sayle  <roger@eyesopen.com>
+
+	* error.c (dump_function_name): Use DECL_TEMPLATE_RESULT for
+	constructor and destructor tests when passed a TEMPLATE_DECL.
+
 2002-07-05  Jason Merrill  <jason@redhat.com>
 
 	* cvt.c (cp_convert_to_pointer): Call force_fit_type for null
