c-common.c (c_common_post_options): Update prototype; don't init backends if preprocessing only.
	* c-common.c (c_common_post_options): Update prototype;
	don't init backends if preprocessing only.
	* langhooks-def.h (LANG_HOOKS_POST_OPTIONS): Update.
	* langhooks.h (struct lang_hooks): Update post_options to
	return a boolean.
	* toplev.c (parse_options_and_default_flags, do_compile,
	lang_independent_init): Update prototypes.  Allow the
	front end to specify that there is no need to initialize
	the back end.
	(general_init): Move call to hex_init here...
	(toplev_main): ...from here.  Pass flag for back end init
	suppression.
java:
	* lang.c (java_post_options): Update prototype.

From-SVN: r55306

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-07  Neil Booth  <neil@daikokuya.co.uk>
+
+	* lang.c (java_post_options): Update prototype.
+
 2002-07-05  Roger Sayle  <roger@eyesopen.com>
 
 	* java/builtins.c (initialize_builtins): Ignore the additional
