--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2002-07-07  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-common.c (c_common_post_options): Update prototype;
+	don't init backends if preprocessing only.
+	* langhooks-def.h (LANG_HOOKS_POST_OPTIONS): Update.
+	* langhooks.h (struct lang_hooks): Update post_options to
+	return a boolean.
+	* toplev.c (parse_options_and_default_flags, do_compile,
+	lang_independent_init): Update prototypes.  Allow the
+	front end to specify that there is no need to initialize
+	the back end.
+	(general_init): Move call to hex_init here...
+	(toplev_main): ...from here.  Pass flag for back end init
+	suppression.
+
 Sun Jul  7 20:38:38 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.h (PRINT_OPERAND_PUNCT_VALID_P): Allow '\''.
