--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2002-07-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* Make-lang.in (cp/parse.o): Depend on decl.h.
+	* cp-tree.h (do_decl_instantiation): Change prototype.
+	* parse.y: Include decl.h.
+	(parse_decl_instantiation): New function.
+	(explicit_instantiation): Use it.
+	* pt.c (do_decl_instantiation): Accept a DECL, not a DECLARATOR
+	and DECLSPECS.
+	
 2002-07-07  Roger Sayle  <roger@eyesopen.com>
 
 	* error.c (dump_function_name): Use DECL_TEMPLATE_RESULT for
