* pt.c (can_complete_type_without_circularity): Add static to 	function definition.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-08  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* pt.c (can_complete_type_without_circularity): Add static to
+	function definition.
+
 2002-07-08  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (have_extern_spec): Declare it
