* mauve-libgcj: Don't compile java.sql.Blob.BlobTest, 	java.sql.Clob.ClobTest, java.sql.Connection.TestJdbc20, 	java.sql.DatabaseMetaData.TestJdbc20
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55333 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-08  Mark Wielaard  <mark@klomp.org>
+
+	* mauve-libgcj: Don't compile java.sql.Blob.BlobTest,
+	java.sql.Clob.ClobTest, java.sql.Connection.TestJdbc20,
+	java.sql.DatabaseMetaData.TestJdbc20
+
 2002-07-05  Tony Kimball  <alk@pobox.com>
 
 	* java/lang/natRuntime.cc (nativeGetLibname): Added missing `#'.
