--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+
+2002-07-09 Devang Patel <dpatel@apple.com>
+	* objc/objc-act.c (adjust_type_for_id_default): Fix my previous patch.
+	Do not allow ObjC objects as a parameter type for Objective-C methods.
+	My previous patch restricted  'struct' also.
+	
 2002-07-09  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cpperror.c (cpp_error): Default to directive_line within
