--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-09  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/20020312-2.c: Check for __PPC__.
+
 2002-07-09  Diego Novillo  <dnovillo@redhat.com>
 
 	* gcc.c-torture/compile/20020709-1.c: New test.
