* configure: Rebuilt. 	* configure.in: Use `test' after `&&'.  From Chris Faylor.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55366 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-10  Tom Tromey  <tromey@redhat.com>
+
+	* configure: Rebuilt.
+	* configure.in: Use `test' after `&&'.  From Chris Faylor.
+
 2002-07-08  Mark Wielaard  <mark@klomp.org>
 
 	* mauve-libgcj: Don't compile java.sql.Blob.BlobTest,
