--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-10  Graham Stott  <graham.stott@btinternet.com>
+
+	* pt.c (template_parm_this_level_p, push_template_decl_real):
+	Pass depth as int pointer. 
+
 2002-07-10  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (unqualified_name_lookup_error): Declare it.
