--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-11  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/linux64.h (ASM_SPEC): Define.
+
 2002-07-10  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.c (emit_frame_save): New.
