--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-10  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/20000217-1.c: Fix usage of "abort".
+
 2002-07-10  Jeffrey A Law  <law@redhat.com>
 
         * gcc.c-torture/compile/981006-1.x: Do not use -fpic for mn102.
